# wilson-term

./: .gitignore  AGENTS.md  CHANGELOG.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  HANDOVER.md  IMPROVEMENTS.md  README.md  electron-builder.yml  electron.vite.config.ts  eslint.config.js  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.js  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: HANDOVER-PHASE5.md  IME_LEAK_FIX_PLAN.md  IMPLEMENTATION-GUIDELINE.md  PLUGIN_DEV_GUIDE.md  xterm-v6.0.0-issues.md  xterm-v6.0.0-merge-analysis.md
docs/plugin-demo/: README.md  manifest.json  package.json  tsconfig.json
docs/plugin-demo/scripts/: build-zip.js
docs/plugin-demo/src/: main.ts  plugin-types.ts  renderer.ts
resources/: icon.icns
scripts/: generate-icons.js  package-beta.js  patch-xterm.js  set-prerelease-version.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  keyboard.rs  lib.rs  logger.rs  main.rs  plugin_host.rs  sftp.rs  storage.rs  types.rs  updater.rs
src-tauri/src/connection/: bash.rs  c1_convert.rs  manager.rs  mod.rs  protocol_parser.rs  serial.rs  ssh.rs  telnet.rs
src/main/: app-logger.ts  domain.ts  index.ts  ipc.ts  keyboard.ts  logger.ts  plugin-host.ts  sftp.ts  storage.ts  updater.ts
src/main/connection/: base-connection.ts  bash-connection.ts  c1-convert.ts  ipc.ts  manager.ts  protocol-parser.ts  serial-connection.ts  ssh-connection.ts  telnet-connection.ts  telnet-protocol.ts  types.ts
src/preload/: index.ts
src/renderer/: index.html  plugin-host.ts
src/renderer/src/: App.tsx  api.ts  env.d.ts  main.tsx
src/renderer/src/components/: AboutDialog.tsx  ButtonBar.tsx  ButtonBarManager.tsx  ChangelogDialog.tsx  CommandInput.tsx  ErrorDialog.tsx  GlobalOptionsDialog.tsx  HostKeyDialog.tsx  InputDialog.tsx  LogConfigSection.tsx  MenuBar.tsx  MultiLinePasteDialog.tsx  NewConnectDialog.tsx  PasswordDialog.tsx  PluginManager.tsx  ProfileManager.tsx  ScheduledTaskDialog.tsx  ScheduledTaskEditor.tsx  SearchBar.tsx  SettingsDialog.tsx  SftpFileManager.tsx  Sidebar.tsx  TabBar.tsx  Terminal.tsx  TerminalContextMenu.tsx  TerminalInstance.tsx  TerminalStatusBar.tsx  TitleBar.tsx  UpdateDialog.tsx  UpdateToast.tsx
src/renderer/src/store/: index.ts
src/renderer/src/styles/: globals.css
src/renderer/src/utils/: font.ts  imeLeakFilter.test.mjs  imeLeakFilter.ts  imePatch.ts  logConfig.ts  pasteFilter.ts  resizeDebouncer.ts  searchMatch.ts  settingsResolver.ts  xtermEnhancements.ts
src/shared/: constants.ts
src/shared/types/: index.ts  plugin.ts  profile.ts
terminal-core/: Cargo.toml
terminal-core/src/: lib.rs
terminal-core/src/escape/: apc.rs  csi.rs  dcs.rs  mod.rs  osc.rs
terminal-core/src/keyboard/: kitty.rs  mod.rs
terminal-core/src/mouse/: mod.rs  sgr.rs
terminal-core/src/parser/: actor.rs  mod.rs
terminal-core/src/parser/vtparse/: mod.rs  transitions.rs
terminal-core/src/renderer/: atlas.rs  atlas_list.rs  cache.rs  font.rs  glyph.rs  mod.rs  pipeline.rs  raster.rs  shader.rs  sync.rs
terminal-core/src/screen/: buffer.rs  mod.rs
terminal-core/src/state/: mod.rs  modes.rs  performer.rs
wilson-app/: Cargo.toml
wilson-app/src/: main.rs
wilson-renderer/: Cargo.toml
wilson-renderer/src/: lib.rs  renderer.rs
wilson-window/: Cargo.toml
wilson-window/src/: lib.rs  wgpu_state.rs  window.rs
