[package]
name = "wilson-term"
version = "0.11.0"
description = "Wilson 的 SSH / Telnet / 串口模拟终端"
authors = ["Wilson <zhouws-chn@gitee.com>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "wilson_term_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "1"
once_cell = "1"
parking_lot = "0.12"
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"

# 网络
russh = "0.50.0-beta.7"
russh-keys = "0.50.0-beta.7"
russh-sftp = "2.1"
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
async-trait = "0.1"

# 串口
serialport = "4"

# PTY
portable-pty = "0.8"

# ZIP / 插件
zip = "2"
walkdir = "2"

# 日志
flate2 = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemInformation",
    "Win32_Networking_WinSock",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
